docs: :memo: add Readme

--- a/demo/src/styles/globals.css
+++ b/demo/src/styles/globals.css
@@ -5,6 +5,9 @@
 @import "tailwindcss/preflight.css" layer(base);
 @import "tailwindcss/utilities.css" layer(utilities);
 
+
 @import "tailwind-color-invert";
+
+@plugin "@tailwindcss/typography";
 
 @custom-variant dark (&:where(.dark, .dark *));
