--- a/package/dark.css
+++ b/package/dark.css
@@ -1,6 +1,5 @@
-:where(.dark):not(:where([class~="not-invert"],[class~="not-invert"] *)) {
+.dark {
 	color-scheme: dark;
-
 
 	--color-black: #fff;
 
