--- a/demo/src/styles/globals.css
+++ b/demo/src/styles/globals.css
@@ -1,7 +1,7 @@
 @layer theme, base, components, utilities;
 
-@import "tailwind-color-invert";
-
+@import "tailwind-color-invert" layer(theme);  
+ 
 /* @import "tailwindcss/theme.css" layer(theme); */
 /* * theme需要全量生成，const node_modules/tailwindcss 里拷贝出来，加上static */
 @import "./theme.css" layer(theme);
